--- a/.github/index.html
+++ b/.github/index.html
@@ -14,7 +14,7 @@
 
           <h2>HAPPY</h2>
 
-          <h4>| FROM DESPICABLE ME 2</h4>
+          <h4>| FROM DESPICABLE ME...</h4>
 
         </div>
       </div>
@@ -22,7 +22,7 @@
       <div id="back" class="album">
 
       
-        <h3>| FROM DESPICABLE ME 2</h3>
+        <h3>| FROM DESPICABLE ME...</h3>
 
       
         <h1>HAPPY</h1>
